--- a/app.json
+++ b/app.json
@@ -11,8 +11,6 @@
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     },
-
-    
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -20,7 +18,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.leifonatree.remoteeditornative"
     },
     "android": {
       "adaptiveIcon": {
@@ -31,6 +30,11 @@
     },
     "web": {
       "favicon": "./assets/splash.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "95a3ff59-928b-429d-8246-1ab7c24f9c25"
+      }
     }
   }
 }
