--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "axios": "^1.2.2",
+    "expo": "^46.0.19",
+    "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.5",
+    "expo-updates": "^0.2.11",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-input-prompt": "^1.0.0",
+    "react-native-maps": "^1.3.2",
+    "react-native-uuid": "^2.0.1",
     "react-native-web-refresh-control": "^1.1.1",
     "react-native-webview": "11.23.0"
   },
